Create command provider and adjust registries (#2273)
* Add catalog loader provider

* Clean up to match core code